Modify access rules

--- a/project.config
+++ b/project.config
@@ -17,6 +17,7 @@
 	create = group user/Alexpechonov
 	push = +force group user/Alexpechonov
 	pushMerge = group user/Alexpechonov
+	label-Code-Review = -2..+2 group Registered Users
 [access "refs/tags/*"]
 	push = +force group user/Alexpechonov
 	pushTag = group user/Alexpechonov
