--- a/project.config
+++ b/project.config
@@ -3,22 +3,22 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/Alexpechonov
+	owner = group user/Alexpechonov (Alexpechonov)
 [access "refs/for/refs/*"]
-	read = group user/Alexpechonov
-	push = group user/Alexpechonov
-	label-Code-Review = -2..+2 group user/Alexpechonov
-	label-Verified = -1..+1 group user/Alexpechonov
-	rebase = group user/Alexpechonov
-	removeReviewer = group user/Alexpechonov
-	submit = group user/Alexpechonov
+	read = group user/Alexpechonov (Alexpechonov)
+	push = group user/Alexpechonov (Alexpechonov)
+	label-Code-Review = -2..+2 group user/Alexpechonov (Alexpechonov)
+	label-Verified = -1..+1 group user/Alexpechonov (Alexpechonov)
+	rebase = group user/Alexpechonov (Alexpechonov)
+	removeReviewer = group user/Alexpechonov (Alexpechonov)
+	submit = group user/Alexpechonov (Alexpechonov)
 [access "refs/heads/*"]
-	read = group user/Alexpechonov
-	create = group user/Alexpechonov
-	push = +force group user/Alexpechonov
-	pushMerge = group user/Alexpechonov
+	read = group user/Alexpechonov (Alexpechonov)
+	create = group user/Alexpechonov (Alexpechonov)
+	push = +force group user/Alexpechonov (Alexpechonov)
+	pushMerge = group user/Alexpechonov (Alexpechonov)
 	label-Code-Review = -2..+2 group Registered Users
 [access "refs/tags/*"]
-	push = +force group user/Alexpechonov
-	pushTag = group user/Alexpechonov
-	pushSignedTag = group user/Alexpechonov
+	push = +force group user/Alexpechonov (Alexpechonov)
+	pushTag = group user/Alexpechonov (Alexpechonov)
+	pushSignedTag = group user/Alexpechonov (Alexpechonov)
